DP-3911 - Input Number - fixing alignment when focused

--- a/styleguide/source/assets/scss/01-atoms/_forms.scss
+++ b/styleguide/source/assets/scss/01-atoms/_forms.scss
@@ -58,6 +58,10 @@ input[type=file] {
       vertical-align: bottom;
       width: 0;
     }
+
+    &:focus:after {
+      bottom: 1px;
+    }
   }
 
   &__plus {
